fixed spacing between cards in mobile view

--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -1,13 +1,16 @@
 @media screen and (min-width: 960px) {
     #about-content {
         width: 910px;
-        margin: auto;
-        position: inherit;
     }
 }
 
 @media screen and (max-width: 959px) {
     #about-content {
-        width: fit-content;
+        width: 90%;
     }
+}
+
+#about-content {
+    margin: auto;
+    position: inherit;
 }
